2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/StackPanelTest.cs: Update stackpanel
	  tests to SL4.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/TextBlockTest.cs: Update the
	  TextBlock tests to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTest.cs: Added validators to
	  Control.FontSize and Control.FontFamily. All Control tests
	  now pass under SL4.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ControlTemplateTest.cs: Add the
	  missing MoonlightBug

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs:
	* System.Windows.Controls/ControlTemplateTest.cs: Update the
	  ControlTemplate tests for SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: Update the
	  ContentControl tests to SL4 compatibility.

	* System.Windows/FrameworkElementTest.cs: These tests all pass
	  now.

	* System.Windows.Controls/ContentPresenterTest.cs: Update the
	  ContentPresenterTests to SL4 compatibility.

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Interop/SilverlightHostTest.cs: Add test case
	for NavigationStateChanged

2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTestBase.cs: SL4 has
	  reverted that horrible change SL3 introduced, awesome!

	* System.Windows.Controls/ListBoxTest.cs: Add an extra tick to
	  allow the test to work properly on SL4.

2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs: Refactor this test
	  for SL4 compatibility. Woo, we already pass it :)

2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* System.ComponentModel/DesignerPropertiesTest.cs: Add a few
	  more asserts to check the behaviour of
	  DesignerProperties.SetIsInDesignMode

2010-06-30  Sebastien Pouliot  <sebastien@ximian.com>
